--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,8 @@
          "extensions": [
              "GitHub.copilot"
          ]
+ ,
+ "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
      },
      "codespaces": {
          "openFiles": [
